--- a/404.html
+++ b/404.html
@@ -1,25 +1,66 @@
 ---
 permalink: /404.html
 layout: page
+title: Lost in the Wilderness
 ---
 
 <style type="text/css" media="screen">
-  .container {
-    margin: 10px auto;
-    max-width: 600px;
+  .lost-container {
+    margin: 2rem auto;
+    max-width: 700px;
     text-align: center;
+    background: rgba(244, 232, 208, 0.9);
+    border: 3px solid #8b4513;
+    border-radius: 15px;
+    padding: 3rem 2rem;
+    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3);
   }
-  h1 {
-    margin: 30px 0;
+  
+  .lost-container h1 {
+    font-family: 'Cinzel', serif;
     font-size: 4em;
-    line-height: 1;
-    letter-spacing: -1px;
+    color: #8b1a1a;
+    margin: 0 0 1rem;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+  }
+  
+  .lost-container .icon {
+    font-size: 5em;
+    margin-bottom: 1rem;
+  }
+  
+  .lost-container p {
+    font-family: 'Crimson Text', serif;
+    font-size: 1.3em;
+    color: #2c1810;
+    margin: 1rem 0;
+  }
+  
+  .lost-container .back-link {
+    display: inline-block;
+    margin-top: 2rem;
+    padding: 0.8rem 1.5rem;
+    background: linear-gradient(180deg, #d4af37, #a67c21);
+    color: #2c1810;
+    font-family: 'Cinzel', serif;
+    font-weight: 700;
+    text-decoration: none;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    transition: all 0.3s ease;
+  }
+  
+  .lost-container .back-link:hover {
+    background: linear-gradient(180deg, #ffe36b, #ab8426);
+    transform: translateY(-2px);
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
   }
 </style>
 
-<div class="container">
+<div class="lost-container">
+  <div class="icon">🗺️</div>
   <h1>404</h1>
-
-  <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
+  <p><strong>The path you seek does not exist!</strong></p>
+  <p>It appears you've wandered into uncharted territory. The page you're looking for has been lost to the mists of time.</p>
+  <a href="{{ '/' | relative_url }}" class="back-link">⚔️ Return to Safety</a>
 </div>
